force-app/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Grid_Name__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Grid_Name__c</fullName>
    <label>Grid Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>