force-app/main/default/objects/GBLite__GB_Global_Meta__c/fields/GBLite__Type__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GW1 Meta Request</fullName>
            </value>
            <value>
                <fullName>GW2 Meta Request</fullName>
            </value>
            <value>
                <fullName>Dependent Picklist</fullName>
            </value>
            <value>
                <fullName>Record Type Picklist</fullName>
            </value>
            <value>
                <fullName>Lookup Filter</fullName>
            </value>
            <value>
                <fullName>Lookup Dialog Layout</fullName>
            </value>
            <value>
                <fullName>Lookup Search Fields</fullName>
            </value>
            <value>
                <fullName>No Meta Object</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>VF Page Request</fullName>
            </value>
            <value>
                <fullName>Tabbed Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>